[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/options/options.gd" type="Script" id=1]

[node name="Options" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="OptionsPop" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -96.0
margin_right = 120.0
margin_bottom = 96.0
rect_min_size = Vector2( 240, 135 )
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="VBoxContainer" parent="OptionsPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="Fullscreen" type="CheckBox" parent="OptionsPop/Options"]
margin_right = 232.0
margin_bottom = 24.0
text = "Toggle Fullscreen"

[node name="Borderless" type="CheckBox" parent="OptionsPop/Options"]
margin_top = 28.0
margin_right = 232.0
margin_bottom = 52.0
text = "Toggle Borderless"

[node name="Vsync" type="CheckBox" parent="OptionsPop/Options"]
margin_top = 56.0
margin_right = 232.0
margin_bottom = 80.0
pressed = true
text = "Toggle Vsync"

[node name="Mute" type="CheckBox" parent="OptionsPop/Options"]
margin_top = 84.0
margin_right = 232.0
margin_bottom = 108.0
text = "Mute All"

[node name="Music" type="Label" parent="OptionsPop/Options"]
margin_top = 112.0
margin_right = 232.0
margin_bottom = 126.0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="OptionsPop/Options"]
margin_top = 130.0
margin_right = 232.0
margin_bottom = 146.0
min_value = -60.0
max_value = 0.0

[node name="Sound" type="Label" parent="OptionsPop/Options"]
margin_top = 150.0
margin_right = 232.0
margin_bottom = 164.0
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="OptionsPop/Options"]
margin_top = 168.0
margin_right = 232.0
margin_bottom = 184.0
min_value = -60.0
max_value = 0.0

[node name="Error" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -37.5
margin_right = 60.0
margin_bottom = 37.5
rect_min_size = Vector2( 120, 67 )
dialog_text = "Error saving options."
dialog_autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="toggled" from="OptionsPop/Options/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="OptionsPop/Options/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="OptionsPop/Options/Vsync" to="." method="_on_vsync_toggled"]
[connection signal="toggled" from="OptionsPop/Options/Mute" to="." method="_on_mute_toggled"]
[connection signal="value_changed" from="OptionsPop/Options/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="OptionsPop/Options/SoundSlider" to="." method="_on_sound_slider_value_changed"]
